# project20XXy

./: .gitignore  .nojekyll  02-literature.Rmd  03-methods.Rmd  04-results.Rmd  05-conclusion.Rmd  CLAUDE.md  README.md  _01-introduction.Rmd  _quarto.yml  config.R  config.py  index.Rmd  index.docx  index.html  index.qmd  jupytext.toml  manuscript.tex  pyproject.toml  references.bib  requirements.txt  styles.css
_manuscript/: index.docx  index.html  index.llms.md
_tex/: references.bib
binder/: apt.txt  environment.yml  install.R
code/: README.md
code01-R-explore-dataset/: ExPanD.RDS  code01-R-explore-dataset.Rmd  code01-R-explore-dataset.html
code02-R-describe-stargazer/: code02-R-describe-stargazer.Rmd
code05-R-regressions-stargazer/: code05-R-regressions-stargazer.Rmd  code05-R-regressions-stargazer.docx  code05-R-regressions-stargazer.html  table.tex  table.text
code10-STATA-add-variable-X/: code10-STATA-add-variable-continental-identifier.do
code20-R-explore-data/: code01-R-explore-dataset.Rmd
code20-R-explore-panel-dataset/: ExPanD.RDS
code20-explore-data/: code01-R-explore-dataset.Rmd
code30-R-describe-stargazer/: code30-R-describe-stargazer.Rmd  table.text
code30-describe-data/: code30-R-describe-stargazer.md
code60-R-regressions-stargazer/: code60-R-regressions-stargazer.Rmd  code60-R-regressions-stargazer.html
data/: README.md  dataLong2years-geo-iso.dta  dataLong2years.csv  dataLong2years.dta  panel_growth.csv
docs/: _main.docx  _main.tex  chapter-title-1.html  chapter-title-2.html  chapter-title.html  chater-title.html  index.html  (+8 more)
(+321 files in other folders)
