[project]
name = "project20XXy"  # [FILL: Rename to your project slug]
version = "0.1.0"
description = "[FILL: Project description]"
requires-python = ">=3.12"
authors = [
    { name = "[FILL: Author name]", email = "[FILL: email@example.com]" },
]
dependencies = [
    # Core scientific stack
    "jupyter>=1.0.0",
    "numpy>=1.26.4",
    "pandas>=2.2.0",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.2",
    # Notebook management
    "jupytext>=1.19.1",
    "tabulate>=0.9.0",
    "nbstata>=0.8.6",
]
